Added OAuth2.0 Client Credentials flow support
